@@ -1,3 +1,8 @@
+2004-02-06 Jean-Pierre Roux
+     * ENH : now gdcmDicomDir::CreateDicomDir() returns also the meta elements
+             GDCM_META added to gdcmDicomDirType
+	     class gdcmMeta created
+
 2004-02-05 Benoit Regrain
      * ENH : add methods in gdcmObject to get the hash table or the list of
        header entries
